@@ -80,7 +80,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020004
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -279,8 +279,8 @@ Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 CHI = 0
-CHI::Driver::FastMmap = 0
-Cache::FastMmap = 0
+CHI::Driver::LMDB = 0
+LMDB_File = 0
 CPAN::Meta = 0
 CPAN::Meta::Prereqs::Diff = 0
 CPAN::Changes::Group::Dependencies::Stats = 0.002002
