@@ -109,8 +109,8 @@ Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 
 CHI                                  = 0
-CHI::Driver::FastMmap                = 0
-Cache::FastMmap                      = 0
+CHI::Driver::LMDB                    = 0
+LMDB_File                            = 0
 
 CPAN::Meta                           = 0
 CPAN::Meta::Prereqs::Diff            = 0
