@@ -1,6 +1,11 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 2.020004
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.003004 → 0.003006
+ - Dist::Zilla::Plugin::BumpVersionAfterRelease 0.002 → 0.003
+ - Dist::Zilla::Plugin::MetaData::BuiltWith 1.003000 → 1.003001
+ - Dist::Zilla::Plugin::Twitter 0.025 → 0.026
 
 2.020003 2014-09-23T14:54:27Z
  [Changed / develop requires]
