@@ -1,6 +1,14 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 2.020003, see misc/*.deps* for details
+ - develop: ↑4
+ - runtime: ↑8 (recommends: +2 -2)
+ - test: ↑1 (recommends: ↑1)
+
+ [Utils]
+ - dep_changes.pl : Use LMDB driver by default
 
 2.020003 2014-09-23T14:54:27Z
  [Dependencies::Stats]
